добавлен метод numbersRange(int start, int end) в ListOperations   - генерирует список Integer через IntStream.rangeClosed().boxed().toList()
Main теперь использует ListOperations.numbersRange(1, 6) вместо Arrays.asList()

заменены Collectors.toList() на toList() в:
  - filterStringsContainingSubstring()
  - sortByLength()

countStringsStartingWith() – добавлена проверка !string.isEmpty() для пустых строк

findMinGreaterThan() – теперь бросает NoSuchElementException с осмысленным сообщением